Version 1.1.0-CVS (?? ??? 2005)
 - Fixed bug 1337535: 'Server Timezone Selection' could not properly saved
 - Fixed bug 1337570: offset on entries from November to April
 - Fixed default UAC settings. User's cal_admin value is now used vs $is_admin
 - Fixed bug 1335631: Admin-Link on bottom of page shows with access control on
 - Changed the way cookies are encrypted. This should fix login looping problems 
 - Added ability to disable RSS link inclusion in print_header(). Useful for popups
 - Fixed bug 1275705: Typos in language files
 - Fixed bug 1278023: Carriage returns break I-cal files in v1.1.0-CVS
 - Fixed bug 1324505: Last hour of day (23:00 - 00:00) missing!
 - Fixed bug 1334863: Week number in week dropdown does not show
 - Implemented a new repeating event system that incorporates most requirements
   of RFC2445. All the ByXXX values are now supported except ByHour, ByMinute and
   BySecond. Multiple Categories, multiple Alarms and RDATE are now supported,
   along with the abiity to export VTIMEZONE elements if desired.
 - Implemented VTODO support with floating display of due date per RFC2445 
 - Added sending of HTML mail (for reminders only now)
 - Added new time range options for reports: next 14/30/60/90/180/365 days
   This allows reports to show events starting with current date
 - Fixed bug 1324156: reminders have GMT time
 - Fixed bug 1324282: Import iCal US Holidays, wrong dates...
 - Added a simple stylesheet to upcoming.php
 - Patch 1306191: Allow users to import from Outlook 2003/XP CSV file
 - Patch 1307029: Various mispellings in app and documentation
 - Fixed bug 1283449: Participants able to edit entries they do not own
 - Fixed bug 1249018: orphaned rows after deleting a user
 - Fixed bug 1298551: Error in comment in upcoming.php
 - Fixed bug 1288923: Fix for bar width in print_entry_timebar
 - Patch 1302296: Updated Japanese translations and changes to charset
   settings for the updates.