@@ -75,6 +75,7 @@ Version 1.1.0-CVS (?? ??? 2005)
     + Category was lost wan clicking on prev/next month in month.php
     + Fixed small bug if using 59 minutes for event time
   - New Features / Enhancements / Changes:
+    + Added admin defined DELFAULT CONFIGURATION for user access control
     + Added ability to disable RSS link inclusion in print_header(). Useful for popups
     + Implemented a new repeating event system that incorporates most requirements
       of RFC2445. All the ByXXX values are now supported except ByHour, ByMinute and
